--- a/themes/next/source/css/_common/components/post/post.styl
+++ b/themes/next/source/css/_common/components/post/post.styl
@@ -58,10 +58,10 @@
 }
 
 .post-body p a{
-  color: #0593d3;
+  color: #ED2367; // WildStrawberry
   border-bottom: none;
   &:hover {
-    color: #0477ab;
+    color: #B50F46; // Darker. Choosed with the help of powerpoint.
     text-decoration: underline;
   }
 }
