--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -21,6 +21,8 @@ $blue-bright  = #87daff;
 $blue         = #0684bd;
 $blue-deep    = #262a30;
 $orange       = #fc6423;
+$WildStrawberry         = #ED2367; // for title
+$CornflowerBlue         = #6395ED; // for headline
 
 
 // Scaffolding
